[package]
name = "timewarrior_report"
version = "0.1.0"
edition = "2018"
authors = ["Björn Guth <b.guth@netcon-consulting.com>"]
description = "Read the data from Timewarrior to create reports"
repository = "https://github.com/scattenlaeufer/timewarrior-report-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
